--- a/.github/workflows/check_salome_execution.yml
+++ b/.github/workflows/check_salome_execution.yml
@@ -8,7 +8,7 @@ on:
     - '.github/assert_run_in_salome.py'
 
   schedule:
-    - cron: '0 3 * * TUE' # new docker is built at 2am every Tuesday, hence running this one hour later
+    - cron: '0 3 * * TUE' # new docker image is built at 2am every Tuesday, hence running this one hour later
 
 
 jobs:
