--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,11 @@ name: Plugin CI
 
 on:
   pull_request:
-    paths:
-    - '.github/workflows/ci.yml'
-    - 'plugin/**'
-    - 'tests/**'
+    branches:
+      - master
 
   schedule:
-    - cron: '0 3 * * *' # new docker is built at 2am every Tuesday, hence running this one hour later
+    - cron: '0 3 * * *' # new docker image is built at 2am every Tuesday, hence running this one hour later
 
 
 jobs:
